<resources>
    <string name="app_name">WebShop</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="list_of_shops">List of Shops</string>
    <string name="admin_page">Admin Page</string>
    <string name="add_manager">Add Manager</string>
    <string name="list_of_managers">List of Managers</string>
    <string name="add_shop">Add Shop</string>
    <string name="title_activity_test">Test</string>
    <string name="name">Name</string>
    <string name="manager_page_title">Manager Page</string>
    <string name="add_item">Add Item</string>
    <string name="hello_world">Hello world</string>
    <string name="currency">€</string>
    <string name="defaultItemCount">0</string>
    <string name="add">Add</string>
    <string name="minusSign">-</string>
    <string name="plusSign">+</string>
    <string name="nameLabel">Name:</string>
    <string name="surnameLabel">Surname:</string>
    <string name="emailLabel">Email:</string>
    <string name="passwordLabel">Password:</string>
</resources>
